<resources>
    <string name="app_name">SPIRIT</string>

    <string name="button_begin">begin</string>

    <string name="button_skip">skip</string>
    <string name="dialog_skip_title">Skip intro?</string>
    <string name="dialog_skip_message">You can rewatch anytime via the settings page.</string>
    <string name="dialog_skip_yes">Skip</string>
    <string name="dialog_skip_no">Keep watching</string>

    <string name="app_logo_descriptor">SPIRIT application logo</string>
    <string name="settings_icon_descriptor">Settings icon</string>

    <string name="list_item_image">Image for the list item</string>
    <string name="list_item_gradient">Gradient</string>

    <string name="settings_title">Settings</string>
    <string name="settings_play_intro">Continue watching intro</string>
    <string name="settings_dialog_play_intro_title">Continue playing intro?</string>
    <string name="settings_dialog_play_intro_content">You will be redirected to the intro screen.</string>
    <string name="settings_dialog_yes">Continue</string>
    <string name="settings_dialog_no">Cancel</string>
    <string name="settings_credits_title">Credits</string>
    <string name="settings_credits_content">Exoplanet data: https://exoplanetarchive.ipac.caltech.edu/docs/program_interfaces.html \n\n Planet 3D model: At https://poly.google.com/view/9OPocAqXM0u by Google licensed under CC-BY \n\n Space-time warp gif: https://thumbs.gfycat.com/DigitalUnfinishedCatfish-size_restricted.gif \n\n SPIRIT logo font: https://www.dafont.com/viking.font \n\n Solid rocket motor image: https://en.wikipedia.org/wiki/Ammonium_perchlorate_composite_propellant#/media/File:Rocket.jpg \n\n Liquid rocket image: https://qph.fs.quoracdn.net/main-qimg-822ebc17683369810c2a9f91f850f284 \n\n Cryogenic rocket image: https://en.wikipedia.org/wiki/Cryogenic_rocket_engine#/media/File:Moteur-Vulcain.jpg \n\n Antimatter rocket: https://en.wikipedia.org/wiki/Antimatter_rocket#/media/File:Antimatter_Rocket.jpg \n\n Solar sail image: https://en.wikipedia.org/wiki/Solar_sail#/media/File:IKAROS_solar_sail.jpg \n\n https://www.nasa.gov/sites/default/files/thumbnails/image/photo_4_ntp_outward_bound.jpg \n\n Intro video images: https://en.wikipedia.org/wiki/History_of_rockets#/media/File:Oldest_depiction_of_rocket_arrows.jpg, https://www.sciencelearn.org.nz/resources/1868-brief-history-of-rockets-timeline, https://www.nasa.gov/missions/research/f_goddard.html, https://www.nasa.gov/multimedia/imagegallery/image_feature_924.html, https://www.nasa.gov/mission_pages/apollo/apollo11.html, https://en.wikipedia.org/wiki/Salyut_1#/media/File:Salyut_1.jpg, https://www.nasa.gov/mission_pages/hubble/story/index.html \n\n Tesla image: https://www.inverse.com/article/41025-space-x-tesla-spaceman-asimov-foundation-arch-books-falcon</string>

    <string name="propulsion_back_descriptor">back icon</string>
    <string name="propulsion_button_details">details</string>
    <string name="propulsion_button_journey">journey</string>
    <string name="propulsion_button_popculture">pop culture</string>
    <string name="propulsion_button_accelerometer">speeds</string>
    <string name="propulsion_button_discoveries">discoveries</string>

    <string name="journey_dialog_title">Confirm journey</string>
    <string name="journey_dialog_propulsion_type_label">Propulsion type: </string>
    <string name="journey_dialog_destination_label">Destination: </string>
    <string name="journey_dialog_length_label">Travelling distance</string>
    <string name="journey_dialog_real_time_label">Approximate realistic travel time: </string>
    <string name="journey_dialog_app_time_label">Approximate app travel time: </string>
    <string name="journey_dialog_toast">You will be notified when you enter the destination planet\'s orbit</string>
    <string name="journey_dialog_no">Pick another planet</string>
    <string name="journey_dialog_yes">Let\'s go!</string>

    <string name="travel_gif_descriptior">Space-time warp animation</string>
    <string name="travel_notification_title">You have reached your destination!</string>
    <string name="travel_notification_content">What happens now?</string>
    <string name="travel_dialog_exoplanet_label">Exoplanet: </string>
    <string name="travel_dialog_year_label">Year of discovery: </string>
    <string name="travel_dialog_distance_label">Distance travelled: </string>
    <string name="travel_dialog_time_label">Time taken: </string>
    <string name="travel_dialog_no">New propulsion type</string>
    <string name="travel_dialog_yes">New journey</string>

    <string name="details_image_descriptor">Propulsion type image descriptor</string>
    <string name="details_status_label">Status: </string>
    <string name="details_max_velocity_label">Max. velocity: </string>
    <string name="details_exhaust_velocity_label">Exhaust velocity: </string>
    <string name="details_highlight_label">Highlight: </string>
    <string name="details_risk_label">Risk: </string>
    <string name="details_description_label">Description: </string>


</resources>
